# regulated-cell-architecture

./: README.md
docs/: RCA_ANALYSIS.md  RCA_CROSS_LANGUAGE_VARIANTS.md
variants/ada/: Makefile  main  rca.gpr
variants/ada/src/: main.adb  rca-cell.adb  rca-cell.ads  rca-control.ads  rca-data.ads  rca-engine.adb  rca-engine.ads  rca-thread.adb  rca-thread.ads  rca.ads
variants/c/: .main.c.swp  Makefile  main.c  rca_run
variants/c/rca/: cell.c  cell.h  control.c  control.h  data.c  data.h  engine.c  engine.h  thread.c  thread.h
variants/cpp/: Makefile  main.cpp  rca_run
variants/cpp/rca/: cell.cpp  cell.hpp  control.hpp  data.hpp  engine.cpp  engine.hpp  thread.cpp  thread.hpp
variants/go/: go.mod  main.go
variants/go/rca/: cell.go  control.go  data.go  engine.go  thread.go
variants/haskell/: Makefile  rca.cabal
variants/haskell/app/: Main.hs
variants/haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
variants/haskell/dist-newstyle/packagedb/ghc-9.6.7/: package.cache  rca-0.1.0.0-inplace.conf
variants/haskell/src/RCA/: Cell.hs  Control.hs  Data.hs  Engine.hs  Thread.hs
variants/java/: Main.java  Makefile
variants/java/rca/: Cell.java  Control.java  Data.java  Engine.java  RcaThread.java
variants/javascript/: main.js
variants/javascript/rca/: cell.js  control.js  data.js  engine.js  thread.js
variants/lisp/: Makefile  main.lisp
variants/lisp/rca/: cell.lisp  control.lisp  data.lisp  engine.lisp  (+2 more)
variants/python/: main.py
variants/zig/: build.zig
(+12 files in other folders)
